--- a/contactUs.html
+++ b/contactUs.html
@@ -23,7 +23,7 @@
          	<br>
   		<br>
           <br>
-          <div id="map">
+          <div>
   	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3059.078541839022!2d-75.1794865483954!3d39.93963279233855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c61537cd1b93%3A0x32c27227e8dc643e!2s2025+Washington+Ave%2C+Philadelphia%2C+PA+19146!5e0!3m2!1sen!2sus!4v1520272094997" width="1024" height="768" frameborder="0" style="border:0" allowfullscreen=""></iframe>
       	</div>
 
@@ -33,7 +33,7 @@
          	<br>
   		<br>
           <br>
-          <div id="map">
+          <div>
   	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3199.9291920110018!2d-121.65800028415225!3d36.67620347997437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808df8c19f3cfd99%3A0xe2bcb73b732d9dca!2s150+Main+St+%23130%2C+Salinas%2C+CA+93901!5e0!3m2!1sen!2sus!4v1550588184893" width="1024" height="768" frameborder="0" style="border:0" allowfullscreen=""></iframe>
       	</div>
 
@@ -43,7 +43,7 @@
          	<br>
   		<br>
           <br>
-          <div id="map">
+          <div>
   	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2908.303497010855!2d-75.55272024752634!3d40.10396905844236!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c68d9607e919dd%3A0x502712636b759e39!2s2432+Charlestown+Rd%2C+Phoenixville%2C+PA+19460!5e0!3m2!1sen!2sus!4v1506808854462" width="1024" height="768" frameborder="0" style="border:0" allowfullscreen=""></iframe>
       	</div>
 
