--- a/careers.html
+++ b/careers.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=1100" ,="" initial-scale="1," user-scaleable="yes&quot;">
-  <link href="style.css" type="text/css"rel="stylesheet" >
+  <link rel="stylesheet" type="text/css" href="Style.css">
 </head>
   <body>
     <div>
