--- a/robotics_news.html
+++ b/robotics_news.html
@@ -22,8 +22,8 @@
                     <a href="index.html"><img src="AGR.gif" alt="Company Logo" align="left"></a>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="robots.html">ROBOTS</a></li>
-                        <li><a href="">APPLICATIONS</a></li>
-                        <li><a href="">BUY</a></li>
+                        <li><a href="applications.html">APPLICATIONS</a></li>
+                        <li><a href="buy.html">BUY</a></li>
                         <li><a href="robotics_company.html">COMPANY</a></li>
                         <li><a href="robotics_news.html">NEWS</a></li>
                         <li><a href="contact.html">CONTACT US</a></li>
