--- a/robotics_news.html
+++ b/robotics_news.html
@@ -26,7 +26,7 @@
                         <li><a href="buy.html">BUY</a></li>
                         <li><a href="robotics_company.html">COMPANY</a></li>
                         <li><a href="robotics_news.html">NEWS</a></li>
-                        <li><a href="contact.html">CONTACT US</a></li>
+                        <li><a href="contactUS.html">CONTACT US</a></li>
                         <li><a href="careers.html">CAREERS</a></li>
                     </ul>
               </div>
