--- a/buy.html
+++ b/buy.html
@@ -49,7 +49,7 @@
         </div>
         <!-- burro image -->
         <div class="col-md-8">
-          <img id="burro-image" class="img-responsive" src="burro-farmer.jpg" alt="Burro and worker together in vines"> 
+          <img id="burro-image" class="img-responsive" src="images/burro-farmer.jpg" alt="Burro and worker together in vines"> 
         </div>
         <!-- whitespace -->
         <div class="col-md-2">
