--- a/applications.html
+++ b/applications.html
@@ -9,7 +9,7 @@
     <title>AGR</title>
     <!-- Bootstrap CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="Style.css"> 
+    <link rel="stylesheet" type="text/css" href="JDstyle.css"> 
 
   </head>
   <body>
