--- a/buy.html
+++ b/buy.html
@@ -8,8 +8,8 @@
 
     <title>AGR</title>
     <!-- Bootstrap CSS -->
-    <link href="bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="Style.css">
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="JDstyle.css">
 
   </head>
   <body>
@@ -49,7 +49,7 @@
         </div>
         <!-- burro image -->
         <div class="col-md-8">
-          <img id="burro-image" class="img-responsive" src="images/burro-farmer.jpg" alt="Burro and worker together in vines"> 
+          <img id="burro-image" class="img-responsive" src="burro-farmer.jpg" alt="Burro and worker together in vines"> 
         </div>
         <!-- whitespace -->
         <div class="col-md-2">
@@ -151,7 +151,7 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Bootstrap JS -->
-    <script src="jquery.min.js"></script>
-    <script src="bootstrap.min.js"></script>
+    <script src="bootstrap/jquery.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
