--- a/robots.html
+++ b/robots.html
@@ -13,15 +13,15 @@
         <div class = "menu banner1">
             <nav class="navbar navbar-inverse navbar-static-top navbar-fixed-top sticky">
                 <div class="container-fluid">
-                    <a href="index.html"><img src="AGR.gif" alt="Company Logo" align="left"></a>
+                    <a href="index.html"><img src="images/AGR.gif" alt="Company Logo" align="left"></a>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="robots.html">ROBOTS</a></li>
-                        <li><a href="applications.html">APPLICATIONS</a></li>
-                        <li><a href="buy.html">BUY</a></li>
-                        <li><a href="robotics_company.html">COMPANY</a></li>
-                        <li><a href="robotics_news.html">NEWS</a></li>
-                        <li><a href="contactUS.html">CONTACT US</a></li>
-                        <li><a href="careers.html">CAREERS</a></li>
+                        <li><a href="#">APPLICATIONS</a></li>
+                        <li><a href="#">BUY</a></li>
+                        <li><a href="#">COMPANY</a></li>
+                        <li><a href="#">NEWS</a></li>
+                        <li><a href="#">CONTACT US</a></li>
+                        <li><a href="#">CAREERS</a></li>
                     </ul>
               </div>
             </nav>
@@ -29,7 +29,7 @@
         <br>
 
         <center>
-        <img class = "robotimg" src="robotspagecover.jpg">
+        <img class = "robotimg" src="images/robotspagecover.jpg">
         <h1><a href="https://www.augeanrobotics.com/burrotablegrapeorders.pdf">Brochure</a></h1>
         <h1>Overview</h1>
         <div class="overview">
@@ -57,31 +57,31 @@
         <br>
 		<div class="slideshow-container">
 		    <div class="mySlides">
-                <img src="08.jpg" style="width:100%">
+                <img src="images/08.jpg" style="width:100%">
             </div>
             <div class="mySlides">
-                <img src="05.jpg" style="width:100%">
+                <img src="images/05.jpg" style="width:100%">
             </div>
             <div class="mySlides">
-                <img src="09.jpg" style="width:100%">
+                <img src="images/09.jpg" style="width:100%">
             </div>
             <div class="mySlides">
-                <img src="1.jpg" style="width:100%">
+                <img src="images/1.jpg" style="width:100%">
             </div>
             <div class="mySlides">
-                <img src="2.jpg" style="width:100%">
+                <img src="images/2.jpg" style="width:100%">
             </div>
             <div class="mySlides">
-                <img src="3.jpg" style="width:100%">
+                <img src="images/3.jpg" style="width:100%">
             </div>
             <div class="mySlides">
-                <img src="15.jpg" style="width:100%">
+                <img src="images/15.jpg" style="width:100%">
             </div>
             <div class="mySlides">
-                <img src="17.jpg" style="width:100%">
+                <img src="images/17.jpg" style="width:100%">
             </div>
             <div class="mySlides">
-                <img src="10.jpg" style="width:100%">
+                <img src="images/10.jpg" style="width:100%">
             </div>
 
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -102,14 +102,14 @@
                 <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSevJIFILd0YdzT6GqMtZpz34Id9rkAD_iOAbhFzHg7HnClaOA/viewform">What else might you want?</a></li>
             </ul>
             <div id="ExpansionKitsimage">
-                <img src="sprayerburro.png">
+                <img src="images/sprayerburro.png">
             </div>
         </div>
         <br>
 
         <h1>Specifications</h1>
-        <img src="Specs.jpg">
-        <img class="grid" src="Grid.PNG">
+        <img src="images/Specs.jpg">
+        <img class="grid" src="images/Grid.PNG">
         <br>
         <br>
 
@@ -138,6 +138,6 @@
 		<br>
 
         </center>
-        <script src="script.js" ></script>
+        <script src="images/script.js" ></script>
     </body>
 </html>
