--- a/applications.html
+++ b/applications.html
@@ -18,7 +18,7 @@
   <div class = "menu banner1">
       <nav class="navbar navbar-inverse navbar-static-top navbar-fixed-top sticky">
           <div class="container-fluid">
-              <a href="index.html"><img src="AGR.gif" alt="Company Logo" align="left"></a>
+              <a href="index.html"><img src="images/AGR.gif" alt="Company Logo" align="left"></a>
               <ul class="nav navbar-nav navbar-right">
                   <li><a href="robots.html">ROBOTS</a></li>
                   <li><a href="#">APPLICATIONS</a></li>
@@ -37,7 +37,7 @@
 
 
   <!-- banner burro image to show what product actually is -->
-   <img id="AGR-image" class="img-responsive" src="AGR.jpg" alt="Burro and worker together in vines"> 
+   <img id="AGR-image" class="img-responsive" src="images/AGR.jpg" alt="Burro and worker together in vines"> 
 
 
   <!-- embedded youtube video to show burro, this is meant to be centered with whitespace on the sides -->       
