--- a/buy.html
+++ b/buy.html
@@ -18,7 +18,7 @@
     <div class = "menu banner1">
         <nav class="navbar navbar-inverse navbar-static-top navbar-fixed-top sticky">
             <div class="container-fluid">
-                <a href="index.html"><img src="AGR.gif" alt="Company Logo" align="left"></a>
+                <a href="index.html"><img src="images/AGR.gif" alt="Company Logo" align="left"></a>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="robots.html">ROBOTS</a></li>
                     <li><a href="#">APPLICATIONS</a></li>
@@ -49,7 +49,7 @@
         </div>
         <!-- burro image -->
         <div class="col-md-8">
-          <img id="burro-image" class="img-responsive" src="burro-farmer.jpg" alt="Burro and worker together in vines"> 
+          <img id="burro-image" class="img-responsive" src="images/burro-farmer.jpg" alt="Burro and worker together in vines"> 
         </div>
         <!-- whitespace -->
         <div class="col-md-2">
