--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                     <a href="index.html"><img src="images/AGR.gif" alt="Company Logo" align="left"></a>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="robots.html">ROBOTS</a></li>
-                        <li><a href="#">APPLICATIONS</a></li>
-                        <li><a href="#">BUY</a></li>
-                        <li><a href="#">COMPANY</a></li>
-                        <li><a href="#">NEWS</a></li>
-                        <li><a href="#">CONTACT US</a></li>
-                        <li><a href="#">CAREERS</a></li>
+                        <li><a href="applications.html">APPLICATIONS</a></li>
+                        <li><a href="buy.html">BUY</a></li>
+                        <li><a href="robotics_company.html">COMPANY</a></li>
+                        <li><a href="robotics_news.html">NEWS</a></li>
+                        <li><a href="contactUs.html">CONTACT US</a></li>
+                        <li><a href="careers.html">CAREERS</a></li>
                     </ul>
               </div>
             </nav>
