--- a/contactUs.html
+++ b/contactUs.html
@@ -5,6 +5,23 @@
   <link rel="stylesheet" type="text/css" href="Style.css">
 </head>
   <body>
+    
+        <div class = "menu banner1">
+            <nav class="navbar navbar-inverse navbar-static-top navbar-fixed-top sticky">
+                <div class="container-fluid">
+                    <a href="index.html"><img src="images/AGR.gif" alt="Company Logo" align="left"></a>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="robots.html">ROBOTS</a></li>
+                        <li><a href="applications.html">APPLICATIONS</a></li>
+                        <li><a href="buy.html">BUY</a></li>
+                        <li><a href="robotics_company.html">COMPANY</a></li>
+                        <li><a href="robotics_news.html">NEWS</a></li>
+                        <li><a href="contactUs.html">CONTACT US</a></li>
+                        <li><a href="careers.html">CAREERS</a></li>
+                    </ul>
+              </div>
+            </nav>
+        </div>
 
     <div id="contmain1">
          <div id="contactustitle">
