--- a/robotics_company.html
+++ b/robotics_company.html
@@ -23,7 +23,7 @@
   <div class = "menu banner1">
             <nav class="navbar navbar-inverse navbar-static-top navbar-fixed-top sticky">
                 <div class="container-fluid">
-                    <a href="index.html"><img src="AGR.gif" alt="Company Logo" align="left"></a>
+                    <a href="index.html"><img src="images/AGR.gif" alt="Company Logo" align="left"></a>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="robots.html">ROBOTS</a></li>
                         <li><a href="applications.html">APPLICATIONS</a></li>
