--- a/robotics_news.html
+++ b/robotics_news.html
@@ -13,6 +13,9 @@
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="Styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Tomorrow&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
    
   </head>
   <body> 
