--- a/robotics_company.html
+++ b/robotics_company.html
@@ -30,7 +30,7 @@
                         <li><a href="buy.html">BUY</a></li>
                         <li><a href="robotics_company.html">COMPANY</a></li>
                         <li><a href="robotics_news.html">NEWS</a></li>
-                        <li><a href="contactUS.html">CONTACT US</a></li>
+                        <li><a href="contactUs.html">CONTACT US</a></li>
                         <li><a href="careers.html">CAREERS</a></li>
                     </ul>
               </div>
