--- a/robotics_news.html
+++ b/robotics_news.html
@@ -142,30 +142,30 @@
   </div>
 
   <!-- Next and Previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  <a tabindex="0" class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a tabindex="0" class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
 <br>
 
 <!-- Circles on bottom of slides -->
 <div style="text-align:center">        
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-  <span class="dot" onclick="currentSlide(4)"></span>
-  <span class="dot" onclick="currentSlide(5)"></span>
-  <span class="dot" onclick="currentSlide(6)"></span>
-  <span class="dot" onclick="currentSlide(7)"></span>
-  <span class="dot" onclick="currentSlide(8)"></span>
-  <span class="dot" onclick="currentSlide(9)"></span>
-  <span class="dot" onclick="currentSlide(10)"></span>
-  <span class="dot" onclick="currentSlide(11)"></span>
-  <span class="dot" onclick="currentSlide(12)"></span>
-  <span class="dot" onclick="currentSlide(13)"></span>
-  <span class="dot" onclick="currentSlide(14)"></span>
-  <span class="dot" onclick="currentSlide(15)"></span>
-  <span class="dot" onclick="currentSlide(16)"></span>
-  <span class="dot" onclick="currentSlide(17)"></span>
+  <span tabindex="0" class="dot" onclick="currentSlide(1)"></span>
+  <span tabindex="0" class="dot" onclick="currentSlide(2)"></span>
+  <span tabindex="0" class="dot" onclick="currentSlide(3)"></span>
+  <span tabindex="0" class="dot" onclick="currentSlide(4)"></span>
+  <span tabindex="0" class="dot" onclick="currentSlide(5)"></span>
+  <span tabindex="0" class="dot" onclick="currentSlide(6)"></span>
+  <span tabindex="0" class="dot" onclick="currentSlide(7)"></span>
+  <span tabindex="0" class="dot" onclick="currentSlide(8)"></span>
+  <span tabindex="0" class="dot" onclick="currentSlide(9)"></span>
+  <span tabindex="0" class="dot" onclick="currentSlide(10)"></span>
+  <span tabindex="0" class="dot" onclick="currentSlide(11)"></span>
+  <span tabindex="0" class="dot" onclick="currentSlide(12)"></span>
+  <span tabindex="0" class="dot" onclick="currentSlide(13)"></span>
+  <span tabindex="0" class="dot" onclick="currentSlide(14)"></span>
+  <span tabindex="0" class="dot" onclick="currentSlide(15)"></span>
+  <span tabindex="0" class="dot" onclick="currentSlide(16)"></span>
+  <span tabindex="0" class="dot" onclick="currentSlide(17)"></span>
 
 </div>
 
