--- a/robotics_news.html
+++ b/robotics_news.html
@@ -149,7 +149,7 @@
 
 <!-- Circles on bottom of slides -->
 <div style="text-align:center">        
-  <a> <span tabindex="0" class="dot" onclick="currentSlide(1)"></span></a>
+  <a onclick="currentSlide(1)> <span tabindex="0" class="dot"></span></a>
   <span tabindex="0" class="dot" onclick="currentSlide(2)"></span>
   <span tabindex="0" class="dot" onclick="currentSlide(3)"></span>
   <span tabindex="0" class="dot" onclick="currentSlide(4)"></span>
