--- a/buy.html
+++ b/buy.html
@@ -8,7 +8,10 @@
 
     <title>AGR</title>
     <!-- Bootstrap CSS -->
-    <link href="bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Tomorrow" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="JDstyle.css">
 
   </head>
