--- a/careers.html
+++ b/careers.html
@@ -2,6 +2,10 @@
 <html>
 <head>
   <meta name="viewport" content="width=1100" ,="" initial-scale="1," user-scaleable="yes&quot;">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Tomorrow" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="Style.css">
 </head>
   <body>
