--- a/robots.html
+++ b/robots.html
@@ -138,6 +138,6 @@
 		<br>
 
         </center>
-        <script src="images/script.js" ></script>
+        <script src="script.js" ></script>
     </body>
 </html>
