--- a/applications.html
+++ b/applications.html
@@ -38,7 +38,12 @@
   <br>
   <br>
 
-
+ <div id="opacity" class="container">
+   <div class="row">
+     <div class="col-md-2">
+      </div>
+     <div class="col-md-8">
+     
   <!-- banner burro image to show what product actually is -->
    <img id="AGR-image" class="img-responsive" src="images/AGR.jpg" alt="Burro and worker together in vines"> 
 
@@ -98,6 +103,7 @@
         </div>
       </div>
     </div>
+     </div>
 
 
 
