--- a/careers.html
+++ b/careers.html
@@ -33,38 +33,22 @@
 	  
     <div>
     </div>
-    <div id="contmaincareers">
-        <div id="careerstitle">Careers</div>
-		<div id="careerstext">
-            <p>Our mission is to free people from tedious tasks outdoors. To do this, we are beginning with collaborative robots that help farm laborers work more productively, while also laying the base for ever more expansive autonomy where it is needed most. Our launch product, Burro, is a vision-based autonomous platform being used today by growers of table grapes, blueberries, and nursery crops.</p>
-            <p>As a full stack company, sitting at the nexus of hardware/robotics, autonomy, and artificial intelligence, we are launching the first generation of robots into the world's largest industry - agriculture, and solving the #1 challenge facing our food system - labor scarcity.</p>
-            <p>We are venture-backed by leading investors in California, Chicago, and New York, and based in Philadelphia, PA. We are looking for incredible people who share our passion for real-world robotics, and want to be part of a fast-moving and highly execution-oriented team.  As an early member of our team, you will hold meaningful equity and contribute directly to our continued success and culture.</p>
+    <div>
+        <div><h1>Careers<h1></div>
+	    <div>
+               <p>Our mission is to free people from tedious tasks outdoors. To do this, we are beginning with collaborative robots that help farm laborers work more productively, while also laying the base for ever more expansive autonomy where it is needed most. Our launch product, Burro, is a vision-based autonomous platform being used today by growers of table grapes, blueberries, and nursery crops.</p>
+               <p>As a full stack company, sitting at the nexus of hardware/robotics, autonomy, and artificial intelligence, we are launching the first generation of robots into the world's largest industry - agriculture, and solving the #1 challenge facing our food system - labor scarcity.</p>
+               <p>We are venture-backed by leading investors in California, Chicago, and New York, and based in Philadelphia, PA. We are looking for incredible people who share our passion for real-world robotics, and want to be part of a fast-moving and highly execution-oriented team.  As an early member of our team, you will hold meaningful equity and contribute directly to our continued success and culture.</p>
             </div>
-		<div id="Openroles">
-			Open Roles
-        </div>
-
- 		<div id="cto">
-       		<p>
-            <a href="https://www.augeanrobotics.com/careers/AGR_SeniorRoboticSoftwareEngineer.pdf">Senior Robotic Software Engineer</a>
-			</p><p>
+	<div><h1>Open Roles</h1></div>
+        <div><p><a href="https://www.augeanrobotics.com/careers/AGR_SeniorRoboticSoftwareEngineer.pdf">Senior Robotic Software Engineer</a>
 		</p></div>
 
-        <div id="cto">
-       		<p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Deep Learning Engineer</a></p>
-       </div>
+        <div><p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Deep Learning Engineer</a></p></div>
+        <div><p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Robotic Software Engineering Intern</a></p></div>
+        <div><p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Field Technician - Bilingual</a></p></div>
 
-		<div id="cto">
-       		<p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Robotic Software Engineering Intern</a></p>
-		</div>
-
-        <div id="cto">
-       		<p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Field Technician - Bilingual</a></p>
-	     </div>
-
-    <div id="careerswhatwedo">
-			<img src="https://www.augeanrobotics.com/images/team.jpg">
-		</div>
-	</div>
+        <div><img src="https://www.augeanrobotics.com/images/team.jpg"></div>
+   </div>
   </body>
 </html>
