--- a/applications.html
+++ b/applications.html
@@ -95,10 +95,12 @@
         <div class="col-md-4">
           <!-- list of crops tht burro has worked with -->        
           <p id="box-titles" style="font-size:2vw;" class="text-center"><strong>Crops</strong></p>
+          <div id="textbox">
             <p style="font-size:1.25vw;" class="text-center">Table Grapes</p>
             <p style="font-size:1.25vw;" class="text-center">Blueberries</p>
             <p style="font-size:1.25vw;" class="text-center">Caneberries</p>
             <p style="font-size:1.25vw;" class="text-center">Nurse Crops</p>
+        </div>
         </div>
       </div>
     </div>
