--- a/robots.html
+++ b/robots.html
@@ -32,8 +32,8 @@
         <img class = "robotimg" src="images/robotspagecover.jpg">
         <h1><a href="https://www.augeanrobotics.com/burrotablegrapeorders.pdf">Brochure</a></h1>
         <h1>Overview</h1>
-        <div class="overview">
-            <ul id="over" style="list-style: none;">
+        <div id="over" class="overview">
+            <ul style="list-style: none;">
                 <li><p>Burro is a collaborative robot designed to help people work more productively while building the base for more automation where it is needed most.</p></li>
                 <li><p>We have been testing a fleet of Burros through the 2019 table grape season where they have enabled crews of 10 to pick/pack 42% more fruit each day.</p></li>
                 <li><p>Now, having proven that our machines can drive productivity gains, and having tested them extensively, we are taking orders for delivery in spring 2020.</p></li>
@@ -92,7 +92,8 @@
         <h1>An expandable robotic platform for work outdoors</h1>
         <div id="ExpansionKitstext">
             <p>Burro is designed to provide the base for more automation where it is needed most. Below are some autonomy attachments that we are also developing for Burro:</p>
-            <ul id="burro" style="list-style: none;">
+            <div id="burro">
+		<ul style="list-style: none;">
                 <p>
                 <li>Ground level actionable data - yields, weeds, pests, etc.</li>
                 <li>Autonomous sprayer</li>
@@ -101,6 +102,7 @@
                 <br>
                 <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSevJIFILd0YdzT6GqMtZpz34Id9rkAD_iOAbhFzHg7HnClaOA/viewform">What else might you want?</a></li>
             </ul>
+		</div>
             <div id="ExpansionKitsimage">
                 <img src="images/sprayerburro.png">
             </div>
