--- a/robotics_company.html
+++ b/robotics_company.html
@@ -44,10 +44,10 @@
 
        <div class="col-md-12"><img src = "https://media.licdn.com/dms/image/C4E22AQH1F-cNP8Ugng/feedshare-shrink_2048_1536/0?e=1577318400&v=beta&t=SSTaZWKGe2jNBsfuoZczO725QozPq6lFo_xGpiHra7g" width = 100% alt= "Augean Robotics Team Behind Burro Robots">
     <h1 class="Company">Our Mission</h1>
-        <div class="col1">Our mission is to solve the labor problem facing farmers by making robots like Wall-E a reality.  To do this, we are starting first with a collaborative robotic platform called Burro, that helps people work more productively and builds a base for the future where farming is fully autonomous.
+        <div class="col1"><p>Our mission is to solve the labor problem facing farmers by making robots like Wall-E a reality.  To do this, we are starting first with a collaborative robotic platform called Burro, that helps people work more productively and builds a base for the future where farming is fully autonomous. </p>
         <br>
         <br>
-        Our team includes robotic startup veterans with deep experience in computer vision, robotics, and deep learning, as well as entrepreneurs with direct experience selling and marketing ag machinery with some of the worl'ds largest companies.  We get up every day excited to build the future, where robots do all tedious tasks outdoors.</div>
+        <p>Our team includes robotic startup veterans with deep experience in computer vision, robotics, and deep learning, as well as entrepreneurs with direct experience selling and marketing ag machinery with some of the worl'ds largest companies.  We get up every day excited to build the future, where robots do all tedious tasks outdoors.</p></div>
       </div>
     </div>
       <br>
