--- a/careers.html
+++ b/careers.html
@@ -9,6 +9,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Tomorrow" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="Style.css">
+    <link rel="stylesheet" type="text/css" href="MJStyle.css">
 </head>
   <body>
 	    <!-- nav bar -->
