--- a/careers.html
+++ b/careers.html
@@ -35,7 +35,7 @@
 	  
     <div>
     </div>
-    <div id="containcareers">
+    <div id="contmaincareers">
 	   <div><h1><center>Careers</center><h1></div>
 	    <div id="careerstext">
                <p>Our mission is to free people from tedious tasks outdoors. To do this, we are beginning with collaborative robots that help farm laborers work more productively, while also laying the base for ever more expansive autonomy where it is needed most. Our launch product, Burro, is a vision-based autonomous platform being used today by growers of table grapes, blueberries, and nursery crops.</p>
@@ -46,9 +46,9 @@
            <div><p><a href="https://www.augeanrobotics.com/careers/AGR_SeniorRoboticSoftwareEngineer.pdf">Senior Robotic Software Engineer</a>
 		</p></div>
 
-        <div ><p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Deep Learning Engineer</a></p></div>
-        <div><p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Robotic Software Engineering Intern</a></p></div>
-        <div><p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Field Technician - Bilingual</a></p></div>
+        <div id="careerstext"><p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Deep Learning Engineer</a></p></div>
+        <div id="careerstext"><p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Robotic Software Engineering Intern</a></p></div>
+        <div id="careerstext"><p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Field Technician - Bilingual</a></p></div>
 
         <div><center><img src="https://www.augeanrobotics.com/images/team.jpg"></center></div>
    </div>
