--- a/robotics_news.html
+++ b/robotics_news.html
@@ -37,7 +37,9 @@
         </div>
     <br>
     <br>
+    <div id="head">
   <h1>NEWS</h1>
+    </div>
    <div class="slideshow-container">
 
   <!-- Creates a slide which numbers each slide and uses an image from the website and adds text to the images -->
