--- a/careers.html
+++ b/careers.html
@@ -45,11 +45,11 @@
            <div><h1><center>Open Roles</center></h1></div>
            <div><p><a href="https://www.augeanrobotics.com/careers/AGR_SeniorRoboticSoftwareEngineer.pdf">Senior Robotic Software Engineer</a>
 		</p></div>
-
-        <div id="careerstext"><p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Deep Learning Engineer</a></p></div>
-        <div id="careerstext"><p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Robotic Software Engineering Intern</a></p></div>
-        <div id="careerstext"><p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Field Technician - Bilingual</a></p></div>
-
+        <center>
+		<div><p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Deep Learning Engineer</a></p></div>
+		<div><p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Robotic Software Engineering Intern</a></p></div>
+		<div><p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Field Technician - Bilingual</a></p></div>
+        </center>
         <div><center><img src="https://www.augeanrobotics.com/images/team.jpg"></center></div>
    </div>
   </body>
