--- a/careers.html
+++ b/careers.html
@@ -35,7 +35,9 @@
 	  
     <div>
     </div>
-    <div id="contmaincareers">
+	  
+    <center>	  
+    <div>
 	   <div><h1><center>Careers</center><h1></div>
 	    <div id="careerstext">
                <p>Our mission is to free people from tedious tasks outdoors. To do this, we are beginning with collaborative robots that help farm laborers work more productively, while also laying the base for ever more expansive autonomy where it is needed most. Our launch product, Burro, is a vision-based autonomous platform being used today by growers of table grapes, blueberries, and nursery crops.</p>
@@ -51,5 +53,6 @@
         </center>
         <div><center><img src="https://www.augeanrobotics.com/images/team.jpg"></center></div>
    </div>
+   </center>		   
   </body>
 </html>
