--- a/contactUs.html
+++ b/contactUs.html
@@ -46,7 +46,7 @@
           <a href="mailto:charlie@agrbt.com?Subject=I'd%20Like%20to%20Learn%20about%20AGR" target="_top">us a note</a>.</p>
           <p>Visit our <a href="careers.html" target="_top">job opportunities page
           </a> if you have a passion for real world robotics solutions to challenging problems and would like to work with us!</p>
-            </dv>
+            </div>
           <div><h1>We are headquartered in Philadelphia</h1></div>
          	
           <br>
