--- a/careers.html
+++ b/careers.html
@@ -46,11 +46,13 @@
                <p>We are venture-backed by leading investors in California, Chicago, and New York, and based in Philadelphia, PA. We are looking for incredible people who share our passion for real-world robotics, and want to be part of a fast-moving and highly execution-oriented team.  As an early member of our team, you will hold meaningful equity and contribute directly to our continued success and culture.</p>	       
 	   </div>
            <div><h1><center>Open Roles</center></h1></div>
-        <center>		   
+        <center>
+		<div id="par">
            	<div><p><a href="https://www.augeanrobotics.com/careers/AGR_SeniorRoboticSoftwareEngineer.pdf">Senior Robotic Software Engineer</a></p></div>
 		<div><p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Deep Learning Engineer</a></p></div>
 		<div><p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Robotic Software Engineering Intern</a></p></div>
 		<div><p><a href="https://www.augeanrobotics.com/careers/AGR_DeepLearningEngineer.pdf">Field Technician - Bilingual</a></p></div>
+		</div>
         </center>
         <div><center><img src="https://www.augeanrobotics.com/images/team.jpg"></center></div>
    </div>
