--- a/robotics_company.html
+++ b/robotics_company.html
@@ -10,7 +10,10 @@
     <title>AGR</title>
 
     <!-- Bootstrap -->
+    <!--
     <link href="Styles.css" rel="stylesheet">
+-->
+    <link rel="stylesheet" type="text/css" href="Styles.css">
     <link href="https://fonts.googleapis.com/css?family=Tomorrow&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
