--- a/contactUs.html
+++ b/contactUs.html
@@ -42,7 +42,7 @@
          	
           <br>
   		    <br>
-  		    <div id="par" id="careertext">
+  		    <div id="par careertext">
           <p>If you are interested in learning more about Augean Robotics, investing in us, or have a question, please send
           <a href="mailto:charlie@agrbt.com?Subject=I'd%20Like%20to%20Learn%20about%20AGR" target="_top">us a note</a>.</p>
           <p>Visit our <a href="careers.html" target="_top">job opportunities page
