--- a/robots.html
+++ b/robots.html
@@ -30,7 +30,7 @@
 
         <center>
         <img class = "robotimg" src="images/robotspagecover.jpg">
-        <a href="https://www.augeanrobotics.com/burrotablegrapeorders.pdf">Brochure</a>
+        <h1><a href="https://www.augeanrobotics.com/burrotablegrapeorders.pdf">Brochure</a><h1>
         <h1>Overview</h1>
         <div class="overview">
             <ul style="list-style: none;">
