--- a/robotics_news.html
+++ b/robotics_news.html
@@ -145,8 +145,8 @@
   </div>
 
   <!-- Next and Previous buttons -->
-  <a tabindex="0" id="prev" onclick="plusSlides(-1)">#10094;</a>
-  <a tabindex="0" id="next" onclick="plusSlides(1)">#10095;</a>
+  <a tabindex="0" id="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a tabindex="0" id="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
 <br>
 
