--- a/buy.html
+++ b/buy.html
@@ -99,7 +99,7 @@
     
     <!-- link to information page -->
     <div id="overviewlink" style="font-size:1.75vw;" class="text-center">
-      <a href="https://www.augeanrobotics.com/burrotablegrapeorders.pdf">Overview of what you will get with commercial Burros</a>.
+      <a href="https://www.augeanrobotics.com/burrotablegrapeorders.pdf">Click here for full overview of Burro products and services</a>.
     </div>
 
 
