Added alt text to the image

--- a/careers.html
+++ b/careers.html
@@ -59,7 +59,7 @@
 	<br>	   
 	<br>
 		   
-        <div><center><img src="https://www.augeanrobotics.com/images/team.jpg"></center></div>
+        <div><center><img src="https://www.augeanrobotics.com/images/team.jpg" alt= "Augean Robotics Team Behind Burro Robots"></center></div>
    </div>
   		   
   </body>
